--- a/style.css
+++ b/style.css
@@ -1,3 +1,104 @@
-.photo {
-    width: 300px;
+* {
+    box-sizing: border-box;
+  }
+
+html {
+    scroll-behavior: smooth;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    margin: 0; padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #4d2323;
+}
+
+a {
+    text-decoration: none;
+cursor: pointer;
+    transition: 0.3s;
+}
+
+a:hover {
+    color: chocolate;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+  }
+
+.header {
+    border: 1px solid red;
+}
+
+.photo {
+    width: 200px;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    list-style: none;
+  }
+
+  .nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    color: crimson;
+    transition: 0.3s;
+  }
+
+  .nav-link:hover {
+    color: black;
+  }
+
+  .section-item a {
+    text-decoration: none;
+    color: #829985;
+    transition: color 0.5s;
+  }
+
+  .section-item a:hover {
+    color: #4d2323;
+  }
+
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .section {
+    width: 50%;
+  }
+
+  .section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
+  }
+
+  .footer-links {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    border: 1px solid red;
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
