--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ a:hover {
     border: 1px solid red;
   }
 
+  .img-logo {
+    width: 40px;
+  }
+
   @media (max-width: 768px) {
     .section {
       width: 100%;
